# XcomPerkEdit

./: .gitignore  .gitmodules  CMakeLists.txt  Compile.sh  MainWindow.cpp  MainWindow.h  QtDesigner.ui  QtDesigner_v2.ui  Soldier.cpp  Soldier.h  TODO.txt  XcomPerkEdit.pro  main.cpp  readme.md  resources.qrc  utils.cpp  utils.h
Logs/: logs.txt
Qt/: CustomQt.cpp  CustomQt.h  PerkButton.cpp  PerkButton.h
assets/: All_Perk_Data.txt  Archer.txt  Assault.txt  Engineer.txt  Goliath.txt  Guardian.txt  Gunner.txt  Infantry.txt  Jaeger.txt  Marauder.txt  Medic.txt  Pathfinder.txt  Rocketeer.txt  Scout.txt  Shogun.txt  Sniper.txt  Valkyrie.txt  sniper copy.txt
